--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,23 @@ jobs:
       - name: Run pytest
         run: pytest
 
+
+  unit-testing:
+    needs: python-formatting
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run unit tests
+        run: pytest api/*.py
+	
+
   deploy-to-vercel:
     needs: python-formatting
     runs-on: ubuntu-latest
