--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
           python-version: 3.9
       - name: Install flake8
         run: pip install flake8
+      - name: Install Requests
+        run: pip install requests
       - name: Run flake8
         run: flake8 api/
       - name: Install flask
